@@ -1,0 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="Refresh" content="0; url=https://pdssp.github.io/pds_crawler/latest/" />
+</head>
+<body>
+  <p>Follow <a href="/latest/">this link</a>.</p>
+</body>
+</html>
