@@ -16,6 +16,7 @@ pytest-dependency==0.5.1
 pytest-html==3.1.1
 Sphinx==4.3.1
 sphinx-bootstrap-theme==0.8.0
+sphinx-multiversion==0.2.4
 sphinx_rtd_theme
 sphinxcontrib-mermaid==0.8
 sphinxcontrib-plantuml
