@@ -1,4 +1,14 @@
-### Fix option in tqdm (HEAD -> main)
+### Add multiversion doc (HEAD -> main)
+>Mon, 13 Mar 2023 04:59:14 +0100
+
+>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Fix option in tqdm (tag: v1.0.0-rc0, tag: rm, origin/main)
 >Mon, 13 Mar 2023 03:48:28 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Fix log dsplay (origin/main)
+### Fix log dsplay
 >Mon, 13 Mar 2023 03:05:17 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
